<resources>
    <string name="app_name">Lab2_rmcmulle</string>
    <string name="venue">Venue info</string>
    <string name="school1">School1</string>
    <string name="name1">Name1</string>
    <string name="record1">Record1</string>
    <string name="score">Score</string>
    <string name="score_time">Score Time</string>
    <string name="school2">Notre Dame</string>
    <string name="name2">Fighting Irish</string>
    <string name="record2">(19-7)</string>
    <string name="camera">Camera</string>
</resources>
